asgn3/output.output
Terminals unused in grammar

   SIMPLE_ESC_SEQ
   NEWLINE
   COMMENT
   WHERE


Rules useless in parser due to conflicts

  339 return_type: type


State 71 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 272 conflicts: 1 reduce/reduce
State 344 conflicts: 1 shift/reduce
State 583 conflicts: 1 shift/reduce
State 646 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: compilation_unit

    2 identifier: ID

    3 literal: boolean_literal
    4        | integer_literal
    5        | character_literal
    6        | string_literal
    7        | null_literal

    8 boolean_literal: TRUE
    9                | FALSE

   10 integer_literal: DINT_LITERAL
   11                | HDINT_LITERAL

   12 character_literal: CHAR_LITERAL

   13 string_literal: REG_STR_LITERAL
   14               | VER_STR_LITERAL

   15 null_literal: NULL_LIT

   16 right_shift: RSHIFT

   17 right_shift_assignment: RSHIFTEQ

   18 namespace_name: namespace_or_type_name

   19 type_name: namespace_or_type_name

   20 namespace_or_type_name: qualified_identifier
   21                       | qualified_alias_member

   22 type: non_array_type
   23     | array_type

   24 non_array_type: type_name
   25               | simple_type
   26               | nullable_type

   27 simple_type: numeric_type
   28            | class_type
   29            | BOOL

   30 numeric_type: integral_type

   31 integral_type: INT
   32              | UINT
   33              | LONG
   34              | ULONG
   35              | CHAR

   36 nullable_type: non_nullable_value_type '?'

   37 non_nullable_value_type: simple_type

   38 class_type: OBJECT
   39           | STRING

   40 variable_reference: expression

   41 argument_list: argument
   42              | argument_list ',' argument

   43 argument: argument_value
   44         | argument_name argument_value

   45 argument_name: identifier ':'

   46 argument_value: expression
   47               | REF variable_reference

   48 primary_expression: primary_no_array_creation_expression
   49                   | array_creation_expression

   50 primary_no_array_creation_expression: literal
   51                                     | parenthesized_expression
   52                                     | member_access
   53                                     | invocation_expression
   54                                     | element_access
   55                                     | this_access
   56                                     | base_access
   57                                     | object_creation_expression
   58                                     | typeof_expression
   59                                     | default_value_expression

   60 parenthesized_expression: '(' expression ')'

   61 $@1: %empty

   62 member_access: primary_expression '.' identifier $@1
   63              | predefined_type '.' identifier
   64              | qualified_alias_member '.' identifier

   65 predefined_type: BOOL
   66                | CHAR
   67                | INT
   68                | LONG
   69                | OBJECT
   70                | STRING
   71                | UINT
   72                | ULONG

   73 invocation_expression: primary_expression '(' ')'
   74                      | primary_expression '(' argument_list ')'

   75 element_access: primary_no_array_creation_expression '[' expression_list ']'

   76 expression_list: expression
   77                | expression_list ',' expression

   78 this_access: THIS

   79 base_access: BASE '.' identifier
   80            | BASE '[' expression_list ']'

   81 postfix_expression: primary_expression
   82                   | qualified_identifier
   83                   | post_increment_expression
   84                   | post_decrement_expression

   85 post_increment_expression: postfix_expression INCR

   86 post_decrement_expression: postfix_expression DECR

   87 object_creation_expression: NEW type '(' ')'
   88                           | NEW type '(' argument_list ')'
   89                           | NEW type '(' ')' object_or_collection_initializer
   90                           | NEW type '(' argument_list ')' object_or_collection_initializer
   91                           | NEW type object_or_collection_initializer

   92 object_or_collection_initializer: object_initializer
   93                                 | collection_initializer

   94 object_initializer: '{' '}'
   95                   | '{' member_initializer_list '}'
   96                   | '{' member_initializer_list ',' '}'

   97 member_initializer_list: member_initializer
   98                        | member_initializer_list ',' member_initializer

   99 member_initializer: identifier '=' initializer_value

  100 initializer_value: expression
  101                  | object_or_collection_initializer

  102 collection_initializer: '{' element_initializer_list '}'
  103                       | '{' element_initializer_list ',' '}'

  104 element_initializer_list: element_initializer
  105                         | element_initializer_list ',' element_initializer

  106 element_initializer: non_assignment_expression
  107                    | '{' expression_list '}'

  108 array_creation_expression: NEW non_array_type '[' expression_list ']'
  109                          | NEW non_array_type '[' expression_list ']' rank_specifier
  110                          | NEW non_array_type '[' expression_list ']' array_initializer
  111                          | NEW non_array_type '[' expression_list ']' rank_specifier array_initializer
  112                          | NEW array_type array_initializer
  113                          | NEW rank_specifier array_initializer

  114 typeof_expression: TYPEOF '(' type ')'
  115                  | TYPEOF '(' VOID ')'

  116 default_value_expression: DEFAULT '(' type ')'

  117 unary_expression: postfix_expression
  118                 | '+' unary_expression
  119                 | '-' unary_expression
  120                 | '!' unary_expression
  121                 | '~' unary_expression
  122                 | pre_increment_expression
  123                 | pre_decrement_expression
  124                 | cast_expression

  125 pre_increment_expression: INCR unary_expression

  126 pre_decrement_expression: DECR unary_expression

  127 cast_expression: '(' type ')' unary_expression

  128 multiplicative_expression: unary_expression
  129                          | multiplicative_expression '*' unary_expression
  130                          | multiplicative_expression '/' unary_expression
  131                          | multiplicative_expression '%' unary_expression

  132 additive_expression: multiplicative_expression
  133                    | additive_expression '+' multiplicative_expression
  134                    | additive_expression '-' multiplicative_expression

  135 shift_expression: additive_expression
  136                 | shift_expression LSHIFT additive_expression
  137                 | shift_expression right_shift additive_expression

  138 relational_expression: shift_expression
  139                      | relational_expression '<' shift_expression
  140                      | relational_expression '>' shift_expression
  141                      | relational_expression LE shift_expression
  142                      | relational_expression GE shift_expression

  143 equality_expression: relational_expression
  144                    | equality_expression REQ relational_expression
  145                    | equality_expression RNE relational_expression

  146 and_expression: equality_expression
  147               | and_expression '&' equality_expression

  148 exclusive_or_expression: and_expression
  149                        | exclusive_or_expression '^' and_expression

  150 inclusive_or_expression: exclusive_or_expression
  151                        | inclusive_or_expression '|' exclusive_or_expression

  152 conditional_and_expression: inclusive_or_expression
  153                           | conditional_and_expression RAND inclusive_or_expression

  154 conditional_or_expression: conditional_and_expression
  155                          | conditional_or_expression ROR conditional_and_expression

  156 null_coalescing_expression: conditional_or_expression
  157                           | conditional_or_expression DQM null_coalescing_expression

  158 conditional_expression: null_coalescing_expression
  159                       | null_coalescing_expression '?' expression ':' expression

  160 assignment: unary_expression assignment_operator expression

  161 assignment_operator: '='
  162                    | APLUS
  163                    | AMINUS
  164                    | AMULT
  165                    | ADIV
  166                    | AMOD
  167                    | AAND
  168                    | AOR
  169                    | ACARET
  170                    | LSHIFTEQ
  171                    | right_shift_assignment

  172 expression: non_assignment_expression
  173           | assignment

  174 non_assignment_expression: conditional_expression

  175 constant_expression: expression

  176 boolean_expression: expression

  177 statement: labeled_statement
  178          | declaration_statement
  179          | embedded_statement

  180 embedded_statement: block
  181                   | empty_statement
  182                   | expression_statement
  183                   | selection_statement
  184                   | iteration_statement
  185                   | jump_statement
  186                   | try_statement
  187                   | using_statement

  188 block: '{' '}'
  189      | '{' statement_list '}'

  190 statement_list: statement
  191               | statement_list statement

  192 empty_statement: ';'

  193 labeled_statement: identifier ':' statement

  194 declaration_statement: local_variable_declaration ';'
  195                      | local_constant_declaration ';'

  196 local_variable_declaration: local_variable_type local_variable_declarators

  197 local_variable_type: type

  198 local_variable_declarators: local_variable_declarator
  199                           | local_variable_declarators ',' local_variable_declarator

  200 local_variable_declarator: identifier
  201                          | identifier '=' local_variable_initializer

  202 local_variable_initializer: expression
  203                           | array_initializer

  204 local_constant_declaration: CONST type constant_declarators

  205 expression_statement: statement_expression ';'

  206 statement_expression: invocation_expression
  207                     | object_creation_expression
  208                     | assignment
  209                     | post_increment_expression
  210                     | post_decrement_expression
  211                     | pre_increment_expression
  212                     | pre_decrement_expression

  213 selection_statement: if_statement
  214                    | switch_statement

  215 if_statement: IF '(' boolean_expression ')' embedded_statement
  216             | IF '(' boolean_expression ')' embedded_statement ELSE embedded_statement

  217 switch_statement: SWITCH '(' expression ')' switch_block

  218 switch_block: '{' '}'
  219             | '{' switch_sections '}'

  220 switch_sections: switch_section
  221                | switch_sections switch_section

  222 switch_section: switch_labels statement_list

  223 switch_labels: switch_label
  224              | switch_labels switch_label

  225 switch_label: CASE constant_expression ':'
  226             | DEFAULT ':'

  227 iteration_statement: while_statement
  228                    | do_statement
  229                    | for_statement
  230                    | foreach_statement

  231 while_statement: WHILE '(' boolean_expression ')' embedded_statement

  232 do_statement: DO embedded_statement WHILE '(' boolean_expression ')' ';'

  233 for_statement: FOR '(' ';' ';' ')' embedded_statement
  234              | FOR '(' for_initializer ';' ';' ')' embedded_statement
  235              | FOR '(' ';' for_condition ';' ')' embedded_statement
  236              | FOR '(' ';' ';' for_iterator ')' embedded_statement
  237              | FOR '(' for_initializer ';' for_condition ';' ')' embedded_statement
  238              | FOR '(' for_initializer ';' ';' for_iterator ')' embedded_statement
  239              | FOR '(' ';' for_condition ';' for_iterator ')' embedded_statement
  240              | FOR '(' for_initializer ';' for_condition ';' for_iterator ')' embedded_statement

  241 for_initializer: local_variable_declaration
  242                | statement_expression_list

  243 for_condition: boolean_expression

  244 for_iterator: statement_expression_list

  245 statement_expression_list: statement_expression
  246                          | statement_expression_list ',' statement_expression

  247 foreach_statement: FOREACH '(' local_variable_type identifier IN expression ')' embedded_statement

  248 jump_statement: break_statement
  249               | continue_statement
  250               | goto_statement
  251               | return_statement
  252               | throw_statement

  253 break_statement: BREAK ';'

  254 continue_statement: CONTINUE ';'

  255 goto_statement: GOTO identifier ';'
  256               | GOTO CASE constant_expression ';'
  257               | GOTO DEFAULT ';'

  258 return_statement: RETURN ';'
  259                 | RETURN expression ';'

  260 throw_statement: THROW ';'
  261                | THROW expression ';'

  262 try_statement: TRY block catch_clauses
  263              | TRY block finally_clause
  264              | TRY block catch_clauses finally_clause

  265 catch_clauses: general_catch_clause

  266 general_catch_clause: CATCH block

  267 finally_clause: FINALLY block

  268 using_statement: USING '(' resource_acquisition ')' embedded_statement

  269 resource_acquisition: local_variable_declaration
  270                     | expression

  271 compilation_unit: using_directives namespace_member_declarations
  272                 | namespace_member_declarations
  273                 | using_directives
  274                 | epsilon

  275 namespace_declaration: NAMESPACE qualified_identifier namespace_body
  276                      | NAMESPACE qualified_identifier namespace_body ';'

  277 qualified_identifier: identifier
  278                     | qualified_identifier '.' identifier

  279 namespace_body: '{' '}'
  280               | '{' namespace_member_declarations '}'
  281               | '{' using_directives '}'
  282               | '{' using_directives namespace_member_declarations '}'

  283 using_directives: using_directive
  284                 | using_directives using_directive

  285 using_directive: using_alias_directive
  286                | using_namespace_directive

  287 using_alias_directive: USING identifier '=' namespace_or_type_name ';'

  288 using_namespace_directive: USING namespace_name ';'

  289 namespace_member_declarations: namespace_member_declaration
  290                              | namespace_member_declarations namespace_member_declaration

  291 namespace_member_declaration: namespace_declaration
  292                             | type_declaration

  293 type_declaration: class_declaration
  294                 | struct_declaration

  295 qualified_alias_member: identifier DCLN identifier

  296 class_declaration: CLASS identifier class_body
  297                  | modifiers CLASS identifier class_body
  298                  | CLASS identifier class_base class_body
  299                  | CLASS identifier class_body ';'
  300                  | modifiers CLASS identifier class_base class_body
  301                  | modifiers CLASS identifier class_body ';'
  302                  | CLASS identifier class_base class_body ';'
  303                  | modifiers CLASS identifier class_base class_body ';'

  304 modifiers: modifier
  305          | modifiers modifier

  306 modifier: NEW
  307         | PUBLIC
  308         | PROTECTED
  309         | PRIVATE

  310 class_base: ':' class_type

  311 class_body: '{' '}'
  312           | '{' class_member_declarations '}'

  313 class_member_declarations: class_member_declaration
  314                          | class_member_declarations class_member_declaration

  315 class_member_declaration: constant_declaration
  316                         | field_declaration
  317                         | method_declaration
  318                         | constructor_declaration
  319                         | destructor_declaration
  320                         | type_declaration

  321 constant_declaration: CONST type constant_declarators ';'
  322                     | modifiers CONST type constant_declarators ';'

  323 constant_declarators: constant_declarator
  324                     | constant_declarators ',' constant_declarator

  325 constant_declarator: identifier '=' constant_expression

  326 field_declaration: type variable_declarators ';'
  327                  | modifiers type variable_declarators ';'

  328 variable_declarators: variable_declarator
  329                     | variable_declarators ',' variable_declarator

  330 variable_declarator: identifier
  331                    | identifier '=' variable_initializer

  332 variable_initializer: expression
  333                     | array_initializer

  334 method_declaration: method_header method_body

  335 method_header: return_type member_name '(' ')'
  336              | modifiers return_type member_name '(' ')'
  337              | return_type member_name '(' formal_parameter_list ')'
  338              | modifiers return_type member_name '(' formal_parameter_list ')'

  339 return_type: type
  340            | VOID

  341 member_name: qualified_identifier

  342 method_body: block
  343            | ';'

  344 formal_parameter_list: fixed_parameters
  345                      | fixed_parameters ',' parameter_array
  346                      | parameter_array

  347 fixed_parameters: fixed_parameter
  348                 | fixed_parameters ',' fixed_parameter

  349 fixed_parameter: type identifier
  350                | parameter_modifier type identifier
  351                | type identifier default_argument
  352                | parameter_modifier type identifier default_argument

  353 default_argument: '=' expression

  354 parameter_modifier: REF
  355                   | THIS

  356 parameter_array: PARAMS array_type identifier

  357 constructor_declaration: constructor_declarator constructor_body
  358                        | modifiers constructor_declarator constructor_body

  359 constructor_declarator: identifier '(' ')'
  360                       | identifier '(' ')' constructor_initializer
  361                       | identifier '(' formal_parameter_list ')'
  362                       | identifier '(' formal_parameter_list ')' constructor_initializer

  363 constructor_initializer: ':' BASE '(' ')'
  364                        | ':' BASE '(' argument_list ')'
  365                        | ':' THIS '(' ')'
  366                        | ':' THIS '(' argument_list ')'

  367 constructor_body: block
  368                 | ';'

  369 destructor_declaration: '~' identifier '(' ')' destructor_body

  370 destructor_body: block
  371                | ';'

  372 struct_declaration: STRUCT identifier struct_body
  373                   | modifiers STRUCT identifier struct_body
  374                   | STRUCT identifier struct_body ';'
  375                   | modifiers STRUCT identifier struct_body ';'

  376 struct_body: '{' '}'
  377            | '{' struct_member_declarations '}'

  378 struct_member_declarations: struct_member_declaration
  379                           | struct_member_declarations struct_member_declaration

  380 struct_member_declaration: constant_declaration
  381                          | field_declaration
  382                          | method_declaration
  383                          | constructor_declaration
  384                          | type_declaration

  385 array_type: non_array_type rank_specifier

  386 rank_specifier: '[' ']'
  387               | '[' ',' ']'

  388 array_initializer: '{' '}'
  389                  | '{' variable_initializer_list '}'
  390                  | '{' variable_initializer_list ',' '}'

  391 variable_initializer_list: variable_initializer
  392                          | variable_initializer_list ',' variable_initializer

  393 epsilon: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 120
'%' (37) 131
'&' (38) 147
'(' (40) 60 73 74 87 88 89 90 114 115 116 127 215 216 217 231 232 233
    234 235 236 237 238 239 240 247 268 335 336 337 338 359 360 361
    362 363 364 365 366 369
')' (41) 60 73 74 87 88 89 90 114 115 116 127 215 216 217 231 232 233
    234 235 236 237 238 239 240 247 268 335 336 337 338 359 360 361
    362 363 364 365 366 369
'*' (42) 129
'+' (43) 118 133
',' (44) 42 77 96 98 103 105 199 246 324 329 345 348 387 390 392
'-' (45) 119 134
'.' (46) 62 63 64 79 278
'/' (47) 130
':' (58) 45 159 193 225 226 310 363 364 365 366
';' (59) 192 194 195 205 232 233 234 235 236 237 238 239 240 253 254
    255 256 257 258 259 260 261 276 287 288 299 301 302 303 321 322
    326 327 343 368 371 374 375
'<' (60) 139
'=' (61) 99 161 201 287 325 331 353
'>' (62) 140
'?' (63) 36 159
'[' (91) 75 80 108 109 110 111 386 387
']' (93) 75 80 108 109 110 111 386 387
'^' (94) 149
'{' (123) 94 95 96 102 103 107 188 189 218 219 279 280 281 282 311
    312 376 377 388 389 390
'|' (124) 151
'}' (125) 94 95 96 102 103 107 188 189 218 219 279 280 281 282 311
    312 376 377 388 389 390
'~' (126) 121 369
error (256)
BASE (258) 79 80 363 364
BOOL (259) 29 65
BREAK (260) 253
CASE (261) 225 256
CATCH (262) 266
CHAR (263) 35 66
CLASS (264) 296 297 298 299 300 301 302 303
CONST (265) 204 321 322
CONTINUE (266) 254
DEFAULT (267) 116 226 257
DO (268) 232
ELSE (269) 216
FALSE (270) 9
FINALLY (271) 267
FOR (272) 233 234 235 236 237 238 239 240
FOREACH (273) 247
GOTO (274) 255 256 257
IF (275) 215 216
IN (276) 247
INT (277) 31 67
LONG (278) 33 68
NAMESPACE (279) 275 276
NEW (280) 87 88 89 90 91 108 109 110 111 112 113 306
NULL_LIT (281) 15
OBJECT (282) 38 69
PARAMS (283) 356
PRIVATE (284) 309
PROTECTED (285) 308
PUBLIC (286) 307
REF (287) 47 354
RETURN (288) 258 259
STRING (289) 39 70
STRUCT (290) 372 373 374 375
SWITCH (291) 217
THIS (292) 78 355 365 366
THROW (293) 260 261
TRUE (294) 8
TRY (295) 262 263 264
TYPEOF (296) 114 115
UINT (297) 32 71
ULONG (298) 34 72
USING (299) 268 287 288
VOID (300) 115 340
WHILE (301) 231 232
ID (302) 2
DINT_LITERAL (303) 10
HDINT_LITERAL (304) 11
SIMPLE_ESC_SEQ (305)
CHAR_LITERAL (306) 12
REG_STR_LITERAL (307) 13
VER_STR_LITERAL (308) 14
DQM (309) 157
DCLN (310) 295
INCR (311) 85 125
DECR (312) 86 126
RAND (313) 153
ROR (314) 155
REQ (315) 144
RNE (316) 145
LE (317) 141
GE (318) 142
APLUS (319) 162
AMINUS (320) 163
AMULT (321) 164
ADIV (322) 165
AMOD (323) 166
AAND (324) 167
AOR (325) 168
ACARET (326) 169
LSHIFT (327) 136
LSHIFTEQ (328) 170
RSHIFT (329) 16
RSHIFTEQ (330) 17
NEWLINE (331)
COMMENT (332)
WHERE (333)


Nonterminals, with rules where they appear

$accept (103)
    on left: 0
start (104)
    on left: 1, on right: 0
identifier (105)
    on left: 2, on right: 45 62 63 64 79 99 193 200 201 247 255 277
    278 287 295 296 297 298 299 300 301 302 303 325 330 331 349 350
    351 352 356 359 360 361 362 369 372 373 374 375
literal (106)
    on left: 3 4 5 6 7, on right: 50
boolean_literal (107)
    on left: 8 9, on right: 3
integer_literal (108)
    on left: 10 11, on right: 4
character_literal (109)
    on left: 12, on right: 5
string_literal (110)
    on left: 13 14, on right: 6
null_literal (111)
    on left: 15, on right: 7
right_shift (112)
    on left: 16, on right: 137
right_shift_assignment (113)
    on left: 17, on right: 171
namespace_name (114)
    on left: 18, on right: 288
type_name (115)
    on left: 19, on right: 24
namespace_or_type_name (116)
    on left: 20 21, on right: 18 19 287
type (117)
    on left: 22 23, on right: 87 88 89 90 91 114 116 127 197 204 321
    322 326 327 339 349 350 351 352
non_array_type (118)
    on left: 24 25 26, on right: 22 108 109 110 111 385
simple_type (119)
    on left: 27 28 29, on right: 25 37
numeric_type (120)
    on left: 30, on right: 27
integral_type (121)
    on left: 31 32 33 34 35, on right: 30
nullable_type (122)
    on left: 36, on right: 26
non_nullable_value_type (123)
    on left: 37, on right: 36
class_type (124)
    on left: 38 39, on right: 28 310
variable_reference (125)
    on left: 40, on right: 47
argument_list (126)
    on left: 41 42, on right: 42 74 88 90 364 366
argument (127)
    on left: 43 44, on right: 41 42
argument_name (128)
    on left: 45, on right: 44
argument_value (129)
    on left: 46 47, on right: 43 44
primary_expression (130)
    on left: 48 49, on right: 62 73 74 81
primary_no_array_creation_expression (131)
    on left: 50 51 52 53 54 55 56 57 58 59, on right: 48 75
parenthesized_expression (132)
    on left: 60, on right: 51
member_access (133)
    on left: 62 63 64, on right: 52
$@1 (134)
    on left: 61, on right: 62
predefined_type (135)
    on left: 65 66 67 68 69 70 71 72, on right: 63
invocation_expression (136)
    on left: 73 74, on right: 53 206
element_access (137)
    on left: 75, on right: 54
expression_list (138)
    on left: 76 77, on right: 75 77 80 107 108 109 110 111
this_access (139)
    on left: 78, on right: 55
base_access (140)
    on left: 79 80, on right: 56
postfix_expression (141)
    on left: 81 82 83 84, on right: 85 86 117
post_increment_expression (142)
    on left: 85, on right: 83 209
post_decrement_expression (143)
    on left: 86, on right: 84 210
object_creation_expression (144)
    on left: 87 88 89 90 91, on right: 57 207
object_or_collection_initializer (145)
    on left: 92 93, on right: 89 90 91 101
object_initializer (146)
    on left: 94 95 96, on right: 92
member_initializer_list (147)
    on left: 97 98, on right: 95 96 98
member_initializer (148)
    on left: 99, on right: 97 98
initializer_value (149)
    on left: 100 101, on right: 99
collection_initializer (150)
    on left: 102 103, on right: 93
element_initializer_list (151)
    on left: 104 105, on right: 102 103 105
element_initializer (152)
    on left: 106 107, on right: 104 105
array_creation_expression (153)
    on left: 108 109 110 111 112 113, on right: 49
typeof_expression (154)
    on left: 114 115, on right: 58
default_value_expression (155)
    on left: 116, on right: 59
unary_expression (156)
    on left: 117 118 119 120 121 122 123 124, on right: 118 119 120
    121 125 126 127 128 129 130 131 160
pre_increment_expression (157)
    on left: 125, on right: 122 211
pre_decrement_expression (158)
    on left: 126, on right: 123 212
cast_expression (159)
    on left: 127, on right: 124
multiplicative_expression (160)
    on left: 128 129 130 131, on right: 129 130 131 132 133 134
additive_expression (161)
    on left: 132 133 134, on right: 133 134 135 136 137
shift_expression (162)
    on left: 135 136 137, on right: 136 137 138 139 140 141 142
relational_expression (163)
    on left: 138 139 140 141 142, on right: 139 140 141 142 143 144
    145
equality_expression (164)
    on left: 143 144 145, on right: 144 145 146 147
and_expression (165)
    on left: 146 147, on right: 147 148 149
exclusive_or_expression (166)
    on left: 148 149, on right: 149 150 151
inclusive_or_expression (167)
    on left: 150 151, on right: 151 152 153
conditional_and_expression (168)
    on left: 152 153, on right: 153 154 155
conditional_or_expression (169)
    on left: 154 155, on right: 155 156 157
null_coalescing_expression (170)
    on left: 156 157, on right: 157 158 159
conditional_expression (171)
    on left: 158 159, on right: 174
assignment (172)
    on left: 160, on right: 173 208
assignment_operator (173)
    on left: 161 162 163 164 165 166 167 168 169 170 171, on right:
    160
expression (174)
    on left: 172 173, on right: 40 46 60 76 77 100 159 160 175 176
    202 217 247 259 261 270 332 353
non_assignment_expression (175)
    on left: 174, on right: 106 172
constant_expression (176)
    on left: 175, on right: 225 256 325
boolean_expression (177)
    on left: 176, on right: 215 216 231 232 243
statement (178)
    on left: 177 178 179, on right: 190 191 193
embedded_statement (179)
    on left: 180 181 182 183 184 185 186 187, on right: 179 215 216
    231 232 233 234 235 236 237 238 239 240 247 268
block (180)
    on left: 188 189, on right: 180 262 263 264 266 267 342 367 370
statement_list (181)
    on left: 190 191, on right: 189 191 222
empty_statement (182)
    on left: 192, on right: 181
labeled_statement (183)
    on left: 193, on right: 177
declaration_statement (184)
    on left: 194 195, on right: 178
local_variable_declaration (185)
    on left: 196, on right: 194 241 269
local_variable_type (186)
    on left: 197, on right: 196 247
local_variable_declarators (187)
    on left: 198 199, on right: 196 199
local_variable_declarator (188)
    on left: 200 201, on right: 198 199
local_variable_initializer (189)
    on left: 202 203, on right: 201
local_constant_declaration (190)
    on left: 204, on right: 195
expression_statement (191)
    on left: 205, on right: 182
statement_expression (192)
    on left: 206 207 208 209 210 211 212, on right: 205 245 246
selection_statement (193)
    on left: 213 214, on right: 183
if_statement (194)
    on left: 215 216, on right: 213
switch_statement (195)
    on left: 217, on right: 214
switch_block (196)
    on left: 218 219, on right: 217
switch_sections (197)
    on left: 220 221, on right: 219 221
switch_section (198)
    on left: 222, on right: 220 221
switch_labels (199)
    on left: 223 224, on right: 222 224
switch_label (200)
    on left: 225 226, on right: 223 224
iteration_statement (201)
    on left: 227 228 229 230, on right: 184
while_statement (202)
    on left: 231, on right: 227
do_statement (203)
    on left: 232, on right: 228
for_statement (204)
    on left: 233 234 235 236 237 238 239 240, on right: 229
for_initializer (205)
    on left: 241 242, on right: 234 237 238 240
for_condition (206)
    on left: 243, on right: 235 237 239 240
for_iterator (207)
    on left: 244, on right: 236 238 239 240
statement_expression_list (208)
    on left: 245 246, on right: 242 244 246
foreach_statement (209)
    on left: 247, on right: 230
jump_statement (210)
    on left: 248 249 250 251 252, on right: 185
break_statement (211)
    on left: 253, on right: 248
continue_statement (212)
    on left: 254, on right: 249
goto_statement (213)
    on left: 255 256 257, on right: 250
return_statement (214)
    on left: 258 259, on right: 251
throw_statement (215)
    on left: 260 261, on right: 252
try_statement (216)
    on left: 262 263 264, on right: 186
catch_clauses (217)
    on left: 265, on right: 262 264
general_catch_clause (218)
    on left: 266, on right: 265
finally_clause (219)
    on left: 267, on right: 263 264
using_statement (220)
    on left: 268, on right: 187
resource_acquisition (221)
    on left: 269 270, on right: 268
compilation_unit (222)
    on left: 271 272 273 274, on right: 1
namespace_declaration (223)
    on left: 275 276, on right: 291
qualified_identifier (224)
    on left: 277 278, on right: 20 82 275 276 278 341
namespace_body (225)
    on left: 279 280 281 282, on right: 275 276
using_directives (226)
    on left: 283 284, on right: 271 273 281 282 284
using_directive (227)
    on left: 285 286, on right: 283 284
using_alias_directive (228)
    on left: 287, on right: 285
using_namespace_directive (229)
    on left: 288, on right: 286
namespace_member_declarations (230)
    on left: 289 290, on right: 271 272 280 282 290
namespace_member_declaration (231)
    on left: 291 292, on right: 289 290
type_declaration (232)
    on left: 293 294, on right: 292 320 384
qualified_alias_member (233)
    on left: 295, on right: 21 64
class_declaration (234)
    on left: 296 297 298 299 300 301 302 303, on right: 293
modifiers (235)
    on left: 304 305, on right: 297 300 301 303 305 322 327 336 338
    358 373 375
modifier (236)
    on left: 306 307 308 309, on right: 304 305
class_base (237)
    on left: 310, on right: 298 300 302 303
class_body (238)
    on left: 311 312, on right: 296 297 298 299 300 301 302 303
class_member_declarations (239)
    on left: 313 314, on right: 312 314
class_member_declaration (240)
    on left: 315 316 317 318 319 320, on right: 313 314
constant_declaration (241)
    on left: 321 322, on right: 315 380
constant_declarators (242)
    on left: 323 324, on right: 204 321 322 324
constant_declarator (243)
    on left: 325, on right: 323 324
field_declaration (244)
    on left: 326 327, on right: 316 381
variable_declarators (245)
    on left: 328 329, on right: 326 327 329
variable_declarator (246)
    on left: 330 331, on right: 328 329
variable_initializer (247)
    on left: 332 333, on right: 331 391 392
method_declaration (248)
    on left: 334, on right: 317 382
method_header (249)
    on left: 335 336 337 338, on right: 334
return_type (250)
    on left: 339 340, on right: 335 336 337 338
member_name (251)
    on left: 341, on right: 335 336 337 338
method_body (252)
    on left: 342 343, on right: 334
formal_parameter_list (253)
    on left: 344 345 346, on right: 337 338 361 362
fixed_parameters (254)
    on left: 347 348, on right: 344 345 348
fixed_parameter (255)
    on left: 349 350 351 352, on right: 347 348
default_argument (256)
    on left: 353, on right: 351 352
parameter_modifier (257)
    on left: 354 355, on right: 350 352
parameter_array (258)
    on left: 356, on right: 345 346
constructor_declaration (259)
    on left: 357 358, on right: 318 383
constructor_declarator (260)
    on left: 359 360 361 362, on right: 357 358
constructor_initializer (261)
    on left: 363 364 365 366, on right: 360 362
constructor_body (262)
    on left: 367 368, on right: 357 358
destructor_declaration (263)
    on left: 369, on right: 319
destructor_body (264)
    on left: 370 371, on right: 369
struct_declaration (265)
    on left: 372 373 374 375, on right: 294
struct_body (266)
    on left: 376 377, on right: 372 373 374 375
struct_member_declarations (267)
    on left: 378 379, on right: 377 379
struct_member_declaration (268)
    on left: 380 381 382 383 384, on right: 378 379
array_type (269)
    on left: 385, on right: 23 112 356
rank_specifier (270)
    on left: 386 387, on right: 109 111 113 385
array_initializer (271)
    on left: 388 389 390, on right: 110 111 112 113 203 333
variable_initializer_list (272)
    on left: 391 392, on right: 389 390 392
epsilon (273)
    on left: 393, on right: 274


State 0

    0 $accept: . start $end

    CLASS      shift, and go to state 1
    NAMESPACE  shift, and go to state 2
    NEW        shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    PUBLIC     shift, and go to state 6
    STRUCT     shift, and go to state 7
    USING      shift, and go to state 8

    $default  reduce using rule 393 (epsilon)

    start                          go to state 9
    compilation_unit               go to state 10
    namespace_declaration          go to state 11
    using_directives               go to state 12
    using_directive                go to state 13
    using_alias_directive          go to state 14
    using_namespace_directive      go to state 15
    namespace_member_declarations  go to state 16
    namespace_member_declaration   go to state 17
    type_declaration               go to state 18
    class_declaration              go to state 19
    modifiers                      go to state 20
    modifier                       go to state 21
    struct_declaration             go to state 22
    epsilon                        go to state 23


State 1

  296 class_declaration: CLASS . identifier class_body
  298                  | CLASS . identifier class_base class_body
  299                  | CLASS . identifier class_body ';'
  302                  | CLASS . identifier class_base class_body ';'

    ID  shift, and go to state 24

    identifier  go to state 25


State 2

  275 namespace_declaration: NAMESPACE . qualified_identifier namespace_body
  276                      | NAMESPACE . qualified_identifier namespace_body ';'

    ID  shift, and go to state 24

    identifier            go to state 26
    qualified_identifier  go to state 27


State 3

  306 modifier: NEW .

    $default  reduce using rule 306 (modifier)


State 4

  309 modifier: PRIVATE .

    $default  reduce using rule 309 (modifier)


State 5

  308 modifier: PROTECTED .

    $default  reduce using rule 308 (modifier)


State 6

  307 modifier: PUBLIC .

    $default  reduce using rule 307 (modifier)


State 7

  372 struct_declaration: STRUCT . identifier struct_body
  374                   | STRUCT . identifier struct_body ';'

    ID  shift, and go to state 24

    identifier  go to state 28


State 8

  287 using_alias_directive: USING . identifier '=' namespace_or_type_name ';'
  288 using_namespace_directive: USING . namespace_name ';'

    ID  shift, and go to state 24

    identifier              go to state 29
    namespace_name          go to state 30
    namespace_or_type_name  go to state 31
    qualified_identifier    go to state 32
    qualified_alias_member  go to state 33


State 9

    0 $accept: start . $end

    $end  shift, and go to state 34


State 10

    1 start: compilation_unit .

    $default  reduce using rule 1 (start)


State 11

  291 namespace_member_declaration: namespace_declaration .

    $default  reduce using rule 291 (namespace_member_declaration)


State 12

  271 compilation_unit: using_directives . namespace_member_declarations
  273                 | using_directives .
  284 using_directives: using_directives . using_directive

    CLASS      shift, and go to state 1
    NAMESPACE  shift, and go to state 2
    NEW        shift, and go to state 3
    PRIVATE    shift, and go to state 4
    PROTECTED  shift, and go to state 5
    PUBLIC     shift, and go to state 6
    STRUCT     shift, and go to state 7
    USING      shift, and go to state 8

    $default  reduce using rule 273 (compilation_unit)
